src/objects/Payment__c.object
<CustomObject>
    <description>Details of a Guarantor payment made within the Sirono system</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transaction was canceled</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Date_Test__c</fullName>
        <label>Charge Date Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <description>Date of transaction</description>
        <label>Charge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <description>Number of the payment check</description>
        <label>Check Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collected_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <description>Date of deposit</description>
        <label>Deposit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>&quot;Patient Payment - &quot;&amp; TEXT(MONTH(DATEVALUE(Charge_Date__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(Charge_Date__c))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(Charge_Date__c)))</formula>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer of the account</description>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_4__c</fullName>
        <label>Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>Payment_Method__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processor_Transaction_ID__c</fullName>
        <description>Id of the processor</description>
        <label>Processor Transaction ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <description>Date of scheduled payment</description>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sirono_ID__c</fullName>
        <description>Id number</description>
        <externalId>true</externalId>
        <label>Sirono ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <referenceTo>Statement__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If transaction was successful</description>
        <label>Successful</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Successful__c</columns>
        <columns>Method__c</columns>
        <columns>Charge_Date__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>Payment_Plans</fullName>
        <active>true</active>
        <label>Payment Plans</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>